log
Sat, May 17, 2025  2:11:34 AM: 
 sudoku.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  0|5
total_score: 0/70
3f0e54c
Sat, May 17, 2025  2:11:58 AM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|4
total_score: 15/70
16c115c
Sat, May 17, 2025  4:13:27 AM: 
 sudoku.c | 34 ++++++++++++++++++++++++++++++++++
 1 file changed, 34 insertions(+)
 tests:  2|4
total_score: 15/70
4e676fa
Sat, May 17, 2025  4:15:18 AM: 
 sudoku.c | 13 +++++++------
 1 file changed, 7 insertions(+), 6 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:63:30: error: 'k' undeclared (first use in this function)
         int num = n->sudo[i][k];
                              ^
sudoku.c:63:30: note: each undeclared identifier is reported only once for each function it appears in
dc6363d
Sat, May 17, 2025  4:15:31 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|4
total_score: 25/70
a1db9d8
Sat, May 17, 2025  4:17:53 AM: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  4|4
total_score: 25/70
68654f1
Sat, May 17, 2025  4:18:39 AM: 
 sudoku.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  4|4
total_score: 25/70
3a916f2
Sat, May 17, 2025  4:24:26 AM: 
 sudoku.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  6|2
total_score: 45/70
b408e2e
Sat, May 17, 2025  4:26:33 AM: 
 sudoku.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
e742bb6
Sat, May 17, 2025  4:43:12 AM: 
 sudoku.c | 26 ++++++++++++++++++++++++++
 1 file changed, 26 insertions(+)
 tests:  10|0
total_score: 70/70
a7160cd
